--- a/student-model/pom.xml
+++ b/student-model/pom.xml
@@ -41,6 +41,12 @@
             <version>1.0.2.Final</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.1-api</artifactId>
+            <version>1.0.2.Final</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
