--- a/soa-jpa/pom.xml
+++ b/soa-jpa/pom.xml
@@ -38,6 +38,12 @@
             <version>2.9.9</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.8.0-rc-1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
