--- a/student-model/pom.xml
+++ b/student-model/pom.xml
@@ -47,6 +47,12 @@
             <version>1.0.2.Final</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.8.0-rc-1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
